# texteditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Content.h  RenderEditor.h  document.h  input.h
src/: Content.cpp  RenderEditor.cpp  document.cpp  input.cpp  main.cpp
